VarangianApplication/src/content/IssuePage/libtpms-top20/bug_3934.txt
#3934
src/tpm12/tpm_auth.c:2144: error: Buffer Overrun L3
  Offset added: [1, +oo] (⇐ [0, 65] + [1, +oo]) Size: [0, +oo] by call to `TPM_StoreAsymkey_Load`.

src/tpm12/tpm_auth.c:1968:5: Assignment
1966.     TPM_SizedBuffer_Init(&outData);			/* freed @3 */
1967.     TPM_StoreAsymkey_Init(&keyEntity);			/* freed @4 */
1968.     e1DecryptData = NULL;				/* freed @5 */
          ^
1969.     a1Auth = NULL;					/* freed @6 */
1970.     TPM_ChangeauthValidate_Init(&changeauthValidate);	/* freed @7 */

src/tpm12/tpm_auth.c:2142:2: Assignment
2140.     }
2141.     if (returnCode == TPM_SUCCESS) {
2142. 	stream = e1DecryptData;
       ^
2143. 	stream_size = e1DecryptDataLength;
2144. 	returnCode = TPM_StoreAsymkey_Load(&keyEntity, FALSE,

src/tpm12/tpm_auth.c:2144:15: Call
2142. 	stream = e1DecryptData;
2143. 	stream_size = e1DecryptDataLength;
2144. 	returnCode = TPM_StoreAsymkey_Load(&keyEntity, FALSE,
                    ^
2145. 					   &stream, &stream_size,
2146. 					   NULL,	/* TPM_KEY_PARMS */

src/tpm12/tpm_key.c:2033:1: Parameter `stream`
  2031. */
  2032. 
  2033. TPM_RESULT TPM_StoreAsymkey_Load(TPM_STORE_ASYMKEY *tpm_store_asymkey,
        ^
  2034. 				 TPM_BOOL isEK,
  2035. 				 unsigned char **stream,	

src/tpm12/tpm_key.c:2076:7: Call
  2074.     /* load privKey - actually prime factor p */
  2075.     if (rc == 0) {
  2076. 	rc = TPM_SizedBuffer_Load((&(tpm_store_asymkey->privKey.p_key)),
              ^
  2077. 				  stream, stream_size);
  2078.     }

src/tpm12/tpm_sizedbuffer.c:83:14: Call
    81.     printf("  TPM_SizedBuffer_Load:\n");
    82.     if (rc == 0) {
    83.         rc = TPM_Load32(&(tpm_sized_buffer->size), stream, stream_size);
                     ^
    84.     }
    85.     /* if the size is not 0 */

src/tpm12/tpm_load.c:93:1: Parameter `tpm_uint32`
      91. */
      92. 
      93. TPM_RESULT TPM_Load32(uint32_t *tpm_uint32,
          ^
      94.                       unsigned char **stream,
      95.                       uint32_t *stream_size)

src/tpm12/tpm_sizedbuffer.c:93:18: Call
    91.         /* copy the buffer */
    92.         if (rc == 0) {
    93.             rc = TPM_Loadn(tpm_sized_buffer->buffer, tpm_sized_buffer->size, stream, stream_size);
                         ^
    94.         }
    95.     }

src/tpm12/tpm_load.c:202:1: <Offset trace>
200.    no endian adjustments. */
201. 
202. TPM_RESULT TPM_Loadn(BYTE *data,
     ^
203.                      size_t data_length,
204.                      unsigned char **stream,

src/tpm12/tpm_load.c:202:1: Parameter `data_length`
      200.    no endian adjustments. */
      201. 
      202. TPM_RESULT TPM_Loadn(BYTE *data,
           ^
      203.                      size_t data_length,
      204.                      unsigned char **stream,

src/tpm12/tpm_load.c:202:1: <Length trace>
200.    no endian adjustments. */
201. 
202. TPM_RESULT TPM_Loadn(BYTE *data,
     ^
203.                      size_t data_length,
204.                      unsigned char **stream,

src/tpm12/tpm_load.c:202:1: Parameter `stream`
      200.    no endian adjustments. */
      201. 
      202. TPM_RESULT TPM_Loadn(BYTE *data,
           ^
      203.                      size_t data_length,
      204.                      unsigned char **stream,

src/tpm12/tpm_load.c:218:9: Array access: Offset added: [1, +oo] (⇐ [0, 65] + [1, +oo]) Size: [0, +oo] by call to `TPM_StoreAsymkey_Load` 
      216.     /* load the parameter */
      217.     if (rc == 0) {
      218.         memcpy(data, *stream, data_length);
                   ^
      219.         *stream += data_length;
      220.         *stream_size -= data_length;
